# HomeWork_allocator

./: .travis.yml  CMakeLists.txt  ChunkPool.h  CustomAllocator.h  CustomContainer.h  CustomConteiner.cpp  CustomConteiner.h  MapAllocator.cpp  MapAllocator.h  functions.h  main.cpp  test_allocator.cpp
